fix spacing for legend

--- a/src/page-sections/rd-in-contracting/spending/legend.module.scss
+++ b/src/page-sections/rd-in-contracting/spending/legend.module.scss
@@ -5,11 +5,13 @@
 };
 
 .legend-item {
+  margin: 0;
   padding-left: 3rem;
   padding-right: 3rem;
 };
 
 .legend-item-spending {
+  margin: 0;
   padding-top: 4px;
   padding-left: 3rem;
   padding-right: 3rem;
@@ -18,9 +20,11 @@
 .legend-item-small {
   padding-left: .5rem;
   padding-right: .5rem;
+  margin: 0;
 }
 
 .legend-item-small-spending {
+  margin: 0;
   padding-left: .5rem;
   padding-right: .5rem;
   padding-top: 4px;
@@ -40,5 +44,11 @@
   }
   .legend-item-small-spending {
     margin: 0;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 1000px) {
+  .chart-legend {
+    margin-top: -30px;
   }
 }
